# Multi-Emitter-Color-Correction-3DLUT-Builder

./: .gitignore  README.md  README_CIE_VIRTUAL_HULL_WHITE_CAPACITY_PROFILE_PREPROCESS.md  README_MATH_MODEL.md  README_ROADMAP.md  README_SPECTROPHOTOMETER_CCXXMAKE.md  pyproject.toml
FILES_FOR_TRANSITION/: analyze_rgbw_captures.py  build_delaunay_rgbw_lut.py  build_measured_rgbw_lut.py  host_calibration_gui.py  host_calibration_gui_pipeline_ready_udp_capture_spotread_protocol_model_projection.py  prototype_measured_white_solver.py  rgbw_lut_gui.py  wx_virtual_primary_gui.py  xy_target_rgbw_model.py
docs/: project_function_tree.json  project_function_tree.md
rgbw_lut_builder/: paths.py
rgbw_lut_builder/captures/: loaders.py  validators.py
rgbw_lut_builder/correction/: pass_fail_dictionary.py
rgbw_lut_builder/gui/: __init__.py  analyze_rgbw_captures.py  build_delaunay_rgbw_lut.py  build_measured_rgbw_lut.py  prototype_measured_white_solver.py  rgbw_lut_gui.py
rgbw_lut_builder/legacy/: __init__.py
rgbw_lut_builder/model/: __init__.py  gamuts.py  projection.py  rgb_model.py  rgbw_model.py  simplex.py  topology.py  wx_modes.py
tools/: build_lut.py  generate_function_tree.py
