[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbw-lut-builder"
version = "0.1.0"
description = "Standalone RGB/RGBW LUT builder transition package"
readme = "README_ROADMAP.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.scripts]
rgbw-lut-gui = "rgbw_lut_builder.gui.rgbw_lut_gui:main"
rgbw-lut-model-only = "rgbw_lut_builder.build.model_only:main"
rgbw-lut-build-measured = "rgbw_lut_builder.gui.build_measured_rgbw_lut:main"
rgbw-lut-build-delaunay = "rgbw_lut_builder.gui.build_delaunay_rgbw_lut:main"
rgbw-lut-analyze-captures = "rgbw_lut_builder.gui.analyze_rgbw_captures:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["rgbw_lut_builder*"]